feat: allow non members to get invite themselves when the room is public or friends
